--- a/GitHubUpdate/GitHubUpdate.nuspec
+++ b/GitHubUpdate/GitHubUpdate.nuspec
@@ -10,6 +10,6 @@
     <projectUrl>https://github.com/nixxquality/GitHubUpdateCheck/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <copyright>Copyright 2014</copyright>
+    <copyright>Copyright 2014, 2015</copyright>
   </metadata>
 </package>
